TP-5/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  # modify replicas according to your case
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: gcr.io/google-samples/hello-app:1.0
        ports:
          - containerPort: 80
