TP-5/web-svc.yml
apiVersion: v1
kind: Service 
metadata:
  name: web-svc
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
