TP-5/example-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: example-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port: 
              number: 80
